# DeToNATION

./: .gitignore  README.md  pyproject.toml
benchmarks/ViT/: requirements.txt  run.sh  train.py
benchmarks/t5/: README.md  launch.sh  mlauncher.sh  multi-launch.sh  requirements.txt  run.sh  start.sh  train.py
detonation/: __init__.py  detonatiomixin.py  prepare.py
detonation/optim/: DeToAdamW.py  DeToSGD.py  Optimizers.py  __init__.py  demo.py  detonation.py
detonation/repl/: __init__.py  adamw_random_replicator.py  adamw_replicator.py  demo_replicator.py  full_replicator.py  no_replicator.py  random_replicator.py  replicator.py  slicing_replicator.py  striding_replicator.py
detonation/util/: __init__.py  dct_compress.py  dct_transform.py
examples/mnist/: train.py
examples/t5/: requirements.txt  train.py
